@@ -28,16 +28,6 @@
 #include "job.h"
 
 
-/**
- * CFG_DIR:
- *
- * Directory to find configuration files in.
- **/
-#ifndef CFG_DIR
-#define CFG_DIR "/etc/event.d"
-#endif
-
-
 NIH_BEGIN_EXTERN
 
 Job *     cfg_read_job  (const void *parent, const char *filename,
