@@ -1,5 +1,8 @@
 2007-05-27  Scott James Remnant  <scott@netsplit.com>
 
+	* init/cfgfile.h (CFG_DIR): Drop this define, since it's in paths.h
+	(CfgDirectory): 
+
 	* init/cfgfile.c (cfg_read_job): Separate out the job-handling code
 	into a new function that we could call from a stanza if we want
 	later; this one now just maps the file into memory and deals with
